--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
     stage('Build') {
 	    steps {
     	    script {
-
+		 image_name = "overview-project"
                  sh "sudo ls -la"
                  sh "java -version"
 		 sh "sudo docker ps"
