--- a/JenkinsFile
+++ b/JenkinsFile
@@ -15,8 +15,8 @@ pipeline {
                  sh "sudo ls -la"
                  sh "java -version"
 		 sh "mvn --version"
-		 echo "PATH = ${PATH}"
-                 echo "M2_HOME = ${M2_HOME}"
+		 sh echo "PATH = ${PATH}"
+                 sh echo "M2_HOME = ${M2_HOME}"
 		
 	        }
    	        
