--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,8 +2,8 @@ pipeline {
 
     agent any
     tools { 
+        jdk 'JDK8u212' 
         maven 'Maven 3.3.9' 
-        jdk 'jdk8' 
     }
     stages {
 
