--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,8 +17,9 @@ pipeline {
 		 sh "mvn --version"
 		 sh 'echo "PATH = ${PATH}"'
                  sh 'echo "M2_HOME = ${M2_HOME}"'
+		 sh 'mvn clean package'
 		
-	        }
+	     }
    	        
         }
     }
