--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,7 +17,7 @@ pipeline {
 		 sh "mvn --version"
 		 sh 'echo "PATH = ${PATH}"'
                  sh 'echo "M2_HOME = ${M2_HOME}"'
-		 sh 'mvn clean package'
+
 		 sh "ls -la"
 	     }
    	        
@@ -31,6 +31,31 @@ pipeline {
 			}
 		}
 	}
+
+	   stage('SSH transfer') {
+        	 env.SSH_CONFIG_NAME = "overview-aws-ec2"
+    	 path_to_file = "/"
+    	 file_name = "/tochap"
+    	 remote_dir_path = "/test"
+    	 script {
+    	  sshPublisher(
+    	   continueOnError: false, failOnError: true,
+    	   publishers: [
+    	    sshPublisherDesc(
+    	     configName: "${env.SSH_CONFIG_NAME}",
+    	     verbose: true,
+    	     transfers: [
+    	      sshTransfer(
+    	       sourceFiles: "${path_to_file}/${file_name}, ${path_to_file}/${file_name}",
+    	       removePrefix: "${path_to_file}",
+    	       remoteDirectory: "${remote_dir_path}",
+    	       execCommand: "run commands after copy?"
+    	      )
+    	     ])
+    	   ])
+    	 }
+    }
+
 }
     post {
 	always {
