--- a/JenkinsFile
+++ b/JenkinsFile
@@ -43,7 +43,7 @@ pipeline {
                  sh "sudo cp -v target/${archivejar} ${build}"
                  sh "sudo cp -v dockerfile ${build}"
 
-		 zip zipFile: ${WORKSPACE}/livraison/livraison.zip, archive: false, dir: ${WORKSPACE}/${build}
+		 zip zipFile: '${WORKSPACE}/livraison/livraison.zip', archive: false, dir: '${WORKSPACE}/${build}'
 		 archiveArtifacts artifacts: '${WORKSPACE}/livraison/livraison.zip', fingerprint: true
 		 
 		 sh "ls -la ${WORKSPACE}/livraison"
@@ -56,10 +56,11 @@ pipeline {
         steps{
             script {
                             env.SSH_CONFIG_NAME = "overview-aws-ec2"
-                                 path_to_file = "/"
-                                 file_name = "/tochap"
-                                 remote_dir_path = "/test"
+                                 path_to_file = ${WORKSPACE}/"overview-project-build"
+                                 file_name = "simple-spring-security-imp-0.0.1-SNAPSHOT.jar"
+                                 remote_dir_path = "/home/tochyvn/test"
 				 sh "ls -la"
+				 sh "ls -la ${path_to_file}"
                           sshPublisher(
                            continueOnError: false, failOnError: true,
                            publishers: [
@@ -71,7 +72,7 @@ pipeline {
                                sourceFiles: "${path_to_file}/${file_name}, ${path_to_file}/${file_name}",
                                removePrefix: "${path_to_file}",
                                remoteDirectory: "${remote_dir_path}",
-                               execCommand: "run commands after copy?"
+                               execCommand: "ls -la ${remote_dir_path}"
                               )
                              ])
                            ])
