--- a/JenkinsFile
+++ b/JenkinsFile
@@ -53,6 +53,33 @@ pipeline {
     }
 
     
+    stage('SSH transfer') {
+        steps{
+            script {
+                            env.SSH_CONFIG_NAME = "overview-aws-ec2"
+                                 
+				 sh "ls -la"
+				 sh "ls -la ${path_to_file}"
+                          sshPublisher(
+                           continueOnError: false, failOnError: true,
+                           publishers: [
+                            sshPublisherDesc(
+                             configName: "${env.SSH_CONFIG_NAME}",
+                             verbose: true,
+                             transfers: [
+                              sshTransfer(
+                               sourceFiles: "${path_to_file}/${file_name}, ${path_to_file}/${file_name}",
+                               removePrefix: "${path_to_file}",
+                               remoteDirectory: "${remote_dir_path}",
+                               execCommand: "ls -la ${remote_dir_path}"
+                              )
+                             ])
+                           ])
+                         }
+        }
+
+        }
+    
 
     stage('Clean') {
 	 steps {
