--- a/JenkinsFile
+++ b/JenkinsFile
@@ -59,7 +59,7 @@ pipeline {
                             env.SSH_CONFIG_NAME = "overview-aws-ec2"
                                 path_to_file = "overview-project-build"
                                  file_name = "simple-spring-security-imp-0.0.1-SNAPSHOT.jar"
-                                 remote_dir_path = "/home/tochyvn/test/"
+                                 remote_dir_path = "/"
 				 sh "pwd"
 				 sh "ls -la"
 				 sh "ls -la ${path_to_file}"
@@ -74,7 +74,7 @@ pipeline {
                                sourceFiles: "${path_to_file}/${file_name}, ${path_to_file}/${file_name}",
                                removePrefix: "${path_to_file}",
                                remoteDirectory: "${remote_dir_path}",
-                               execCommand: "ls -la ${remote_dir_path}"
+                               execCommand: "ls -la ${remote_dir_path}/home/tochyvn"
                               )
                              ])
                            ])
