--- a/JenkinsFile
+++ b/JenkinsFile
@@ -45,8 +45,9 @@ pipeline {
 
 		sh 'mkdir archive'
                 sh 'echo test > archive/test.txt'
+		sh 'zip --version'
                 zip zipFile: 'test.zip', archive: false, dir: 'archive'
-                archiveArtifacts artifacts: 'test.zip', fingerprint: true
+                
 		
 		 zip zipFile: '${WORKSPACE}/livraison/livraison.zip', archive: false, dir: '${WORKSPACE}/${build}'
 		 
