--- a/JenkinsFile
+++ b/JenkinsFile
@@ -45,7 +45,9 @@ pipeline {
 
 		sh 'mkdir archive'
                 sh 'echo test > archive/test.txt'
-		sh 'zip --version'
+		sh 'gzip --version'
+		sh 'gzip archive/test.txt'
+		sh 'ls -la archive'
                 zip zipFile: 'test.zip', archive: false, dir: 'archive'
                 
 		
