--- a/JenkinsFile
+++ b/JenkinsFile
@@ -46,6 +46,7 @@ pipeline {
 		sh 'mkdir archive'
                 sh 'echo test > archive/test.txt'
 		sh 'gzip --version'
+		sh 'zip -v'
 		sh 'gzip archive/test.txt'
 		sh 'ls -la archive'
                 zip zipFile: 'test.zip', archive: false, dir: 'archive'
