--- a/JenkinsFile
+++ b/JenkinsFile
@@ -33,6 +33,9 @@ pipeline {
                  sh "pwd"
                  build = "livraison"
                  archivejar = "livraison.zip"
+		 jarfile = "simple-spring-security-imp-0.0.1-SNAPSHOT.jar"
+		 dockerfile = "dockerfile"
+		 docker-compose = "docker-compose.yml"
 
                  sh "sudo mkdir -pv ${WORKSPACE}/livraison/"
                  sh "sudo rm -rfv ${WORKSPACE}/livraison/*"
@@ -40,10 +43,9 @@ pipeline {
 
                  sh "sudo mkdir -pv ${build}"
                  sh "sudo rm -rfv ${build}/*"
-                 sh "sudo cp -v target/* ${build}"
-                 sh "sudo cp -v dockerfile ${build}"
+                 sh "sudo cp -v target/${jarfile} ${build}"
+                 sh "sudo cp -v ${dockerfile} ${docker-compose} ${build}"
 
-		sh 'gzip --version'
 		sh 'zip -v'
                 sh "sudo zip -r ${WORKSPACE}/livraison/livraison.zip ${WORKSPACE}/${build}"		 
 		 
