--- a/JenkinsFile
+++ b/JenkinsFile
@@ -61,7 +61,8 @@ pipeline {
                             env.SSH_CONFIG_NAME = "overview-aws-ec2"
                                 path_to_file = "livraison"
                                  file_name = "livraison.zip"
-                                 remote_dir_path = "/"
+                                 remote_dir_path = "${HOME}/test"
+				 zip_directory = ''
 				 sh "pwd"
 				 sh "ls -la"
 				 sh "ls -la ${path_to_file}"
@@ -76,7 +77,7 @@ pipeline {
                                sourceFiles: "${path_to_file}/${file_name}, ${path_to_file}/${file_name}",
                                removePrefix: "${path_to_file}",
                                remoteDirectory: "${remote_dir_path}",
-                               execCommand: "ls -la . && sudo unzip -o ${file_name} && sudo docker-compose --build up"
+                               execCommand: "cd ${remote_dir_path} && ls -la . && sudo unzip -o ${file_name} && sudo docker-compose --build up"
                               )
                              ])
                            ])
