--- a/JenkinsFile
+++ b/JenkinsFile
@@ -76,7 +76,7 @@ pipeline {
                                sourceFiles: "${path_to_file}/${file_name}, ${path_to_file}/${file_name}",
                                removePrefix: "${path_to_file}",
                                remoteDirectory: "${remote_dir_path}",
-                               execCommand: "cd ${remote_dir_path} && ls -la . && sudo unzip -o ${file_name} && sudo docker-compose up --build -d"
+                               execCommand: "cd ${remote_dir_path} && ls -la . && sudo unzip -o ${file_name} -d ${remote_dir_path} && sudo docker-compose up --build -d"
                               )
                              ])
                            ])
