--- a/JenkinsFile
+++ b/JenkinsFile
@@ -77,7 +77,7 @@ pipeline {
                                sourceFiles: "${path_to_file}/${file_name}",
                                removePrefix: "${path_to_file}",
                                remoteDirectory: "/",
-                               execCommand: "cd ${docker_compose_destination} && ls -la . && sudo unzip -o ${file_name} -d ${remote_dir_path} && sudo docker-compose up --build -d"
+                               execCommand: "ls -la . && sudo unzip -o ${file_name} -d ${remote_dir_path} && sudo docker-compose up -f ${docker_compose_destination} --build -d"
                               )
                              ])
                            ])
