--- a/JenkinsFile
+++ b/JenkinsFile
@@ -77,7 +77,7 @@ pipeline {
                                sourceFiles: "${path_to_file}/${file_name}",
                                removePrefix: "${path_to_file}",
                                remoteDirectory: "/",
-                               execCommand: "pwd && sudo unzip -o ${path_to_file}/${file_name} -d ${remote_dir_path} && sudo docker-compose up -f ${docker_compose_destination} --build -d"
+                               execCommand: "pwd && sudo unzip -o ${remote_dir_path}/${file_name} -d ${remote_dir_path} && sudo docker-compose up -f ${docker_compose_destination} --build -d"
                               )
                              ])
                            ])
