--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,10 @@
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 ## Database Properties
-spring.datasource.url = jdbc:mysql://localhost:3306/spring_security_tuto?useSSL=false&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password =
+#spring.datasource.url = jdbc:mysql://localhost:3306/spring_security_tuto?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://mysql-docker-container:3306/spring_app_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username = app_user
+spring.datasource.password = app_user
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -35,5 +36,5 @@ security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
 security.datasource.driver=com.mysql.jdbc.Driver
-security.authority.admin=DMIN_USER
-security.authority.user=TANDARD_USER
+security.authority.admin=ADMIN_USER
+security.authority.user=STANDARD_USER
