--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 ## Database Properties
 #spring.datasource.url = jdbc:mysql://localhost:3306/spring_security_tuto?useSSL=false&serverTimezone=UTC
-spring.datasource.url = jdbc:mysql://mysql-docker-container:3306/spring_app_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://mysql-docker-container:3306/spring_app_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username = app_user
 spring.datasource.password = app_user
 ## Hibernate Properties
