--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,7 +12,7 @@ pipeline {
 		script {
 		    def scannerHome = tool 'SonarQube3.3';
 	            withSonarQubeEnv('SonarQubeServer'){
-                    sh "${scannerHome}/bin/sonar-scanner   -Dsonar.projectKey=master -Dsonar.sources=src -Dsonar.login=admin -Dsonar.password=admin"
+                    sh "mvn sonar:sonar -Dsonar.projectKey=test-maven -Dsonar.host.url=http://168.62.56.161:9000 -Dsonar.login=625ebaaae3298392dd6e153e02228dcd788d30ea"
 		    }
                 }
 	    }
